--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
-<h1>
-  {{title}}
-</h1>
+<md-sidenav-layout [style.height.%]="100">
+  <md-sidenav #start [opened]="true" mode="side">
+      <md-toolbar [color]="primary">
+          <span>SV</span>
+      </md-toolbar>
+    menu
+  </md-sidenav>
+    <md-toolbar [color]="primary">
+        <span>Saúde Virtual</span>
+    </md-toolbar>
+    teste teste teste teste teste teste teste
+</md-sidenav-layout>
